<resources>
    <string name="app_name">PokeDex</string>
    <string name="app_title">PokeDex</string>

    <!-- Menu NavBottom y Drawer -->
    <string name="home">Home</string>
    <string name="listPokemon">Pokemon</string>
    <string name="listFavorites">Favorites</string>
    <string name="listTypes">Types</string>
    <string name="settings">Settings</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="species">Species</string>
    <string name="abilities">Abilities</string>

    <!-- Elementos en General -->
    <string name="canceled_procedure">Cancelo el procedimiento</string>
    <string name="alert_title">Titulo de la alerta</string>
    <string name="alert_message">Mensaje de la alerta</string>
    <string name="alert_positive">Aceptar</string>
    <string name="alert_negative">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>