<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indicadores"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/indicadores">

                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/gray"
                    android:translationZ="1dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnPositive"
                    app:layout_constraintEnd_toStartOf="@+id/btnPositive"
                    app:layout_constraintStart_toEndOf="@+id/btnNegative"
                    app:layout_constraintTop_toTopOf="@+id/btnPositive" />

                <ImageView
                    android:id="@+id/btnClose"
                    style="@style/ClickableView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:importantForAccessibility="no"
                    android:padding="5dp"
                    android:src="@drawable/ic_close"
                    android:translationZ="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray" />

                <ImageView
                    android:id="@+id/imgIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_circle_check"
                    tools:tint="@color/danger" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_circle_check"
                    tools:tint="@color/success" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgIcon"
                    tools:text="@string/alert_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="@string/alert_message" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btnPositive"
                    style="@style/ClickableView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/luces_sencores"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnNegative"
                    app:layout_constraintTop_toBottomOf="@+id/tvMessage"
                    tools:src="@drawable/ic_done"
                    tools:text="@string/alert_positive" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btnNegative"
                    style="@style/ClickableView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/luces_sencores"
                    app:layout_constraintEnd_toStartOf="@+id/btnPositive"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnPositive"
                    tools:src="@drawable/ic_done"
                    tools:text="@string/alert_negative" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnPositive" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>